[package]
name = "tokio-into-sink"
version = "0.1.0"
edition = "2021"
description = "convert a tokio::io::AsyncWrite into a futures::Sink for bytes"
license = "MIT OR Apache-2.0"
repository = "https://github.com/aatifsyed/tokio-into-sink"
documentation = "https://docs.rs/tokio-into-sink"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-sink = "0.3.28"
pin-project-lite = "0.2.13"
tokio = "1.32.0"

[dev-dependencies]
futures = "0.3.28"
tokio = { version = "1.32.0", features = ["fs", "rt"] }
